# RAGn-Roll-Indexer

./: .gitignore  .ninja_deps  .ninja_log  .python-version  CMakeLists.txt  Deployment.py  QAModel.py  build.ninja  buildIndex.py  cmake_install.cmake  converting parq tp csv.py  crawler.py  datasetParsing.ipynb  datasets.ipynb  downloadDataset.py  duckdbRetriever.py  imageEncoder.py  queryEncoder.py  test.py  try_dpr.py  vcpkg-configuration.json
.cmake/api/v1/reply/: cache-v2-7ce5af0de6a150ae6e0d.json  cmakeFiles-v1-bb2b6ab1dbcdd599a85b.json  codemodel-v2-20fc07d17e503a4c841e.json  index-2024-03-27T15-15-45-0693.json  target-RAGn_Roll_Indexer-Debug-e949074dda4b511de6a6.json
QACode/: RagNRollQA.py  knowledgeGraph.py  preprocess.py  questionAnswering.py
kd-tree/: kd-tree.cpp  kd-tree.h
vamana/: main.cpp  ragnroll_vamana.h
